--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,16 @@
 body {
   margin: 0;
-  height: 200vh;
 }
 
 .main {
   width: 100%;
-  height: 100%;
+  height: 500vh;
   background-color: #121212;
+}
+
+.section-hero {
+  height: 200vh;
+  width: 100%;
 }
 
 .canvas {
