--- a/styles.scss
+++ b/styles.scss
@@ -1,12 +1,18 @@
 body {
     margin: 0;
-    height: 200vh;
 }
 
 .main {
     width: 100%;
-    height: 100%;
+    // height: 100%;
+    height: 500vh;
     background-color: #121212;
+}
+
+.section-hero {
+    // height: 100%;
+    height: 200vh;
+    width: 100%;
 }
 
 .canvas {
